Added some xcode functionality and cleared up some more egregious render errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,31 +26,60 @@ list(APPEND SRC ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl3.cpp)
 
 target_link_libraries(DEPENDENCIES INTERFACE imgui)
 
-# Takes in an option for rendering backend
-set(render_sys "Default" CACHE STRING "Which graphics API should the rendering backend be based on")
-set_property(CACHE render_sys PROPERTY STRINGS "Default" "WebGPU" "Vulkan")
+# Sets up compilation options
 
-# Takes in other options
-option(enable_logging "Whether logging should be enabled or not" ON)
-if(${enable_logging})
+# Determines which rendering backend is used
+if(NOT DEFINED SKL_RENDER_SYS)
+        set(SKL_RENDER_SYS "Default" CACHE STRING "Which graphics API should the rendering backend be based on")
+        set_property(CACHE SKL_RENDER_SYS PROPERTY STRINGS "Default" "WebGPU" "Vulkan")
+endif()
+
+# Determines whether debugging functionality is enabled
+if(NOT DEFINED SKL_ENABLE_DEBUGGING)
+        option(SKL_ENABLE_DEBUGGING "Whether debug functionality" ON)
+endif()
+
+# When debugging mode is active, determines whether logging should also be enabled.
+if(NOT DEFINED SKL_ENABLE_LOGGING)
+        if(SKL_ENABLE_DEBUGGING)
+                option(SKL_ENABLE_LOGGING "Whether logging should be enabled or not" ON)
+        elseif(NOT SKL_ENABLE_DEBUGGING)
+                option(SKL_ENABLE_LOGGING "Whether logging should be enabled or not" OFF)
+                message(FATAL_ERROR "Logging cannot be turned on for non debugging builds")
+        endif()
+endif()
+
+# When debugging mode is active, determines whether hard stopping asserts should also be enabled.
+# Currently not implemented.
+if(NOT DEFINED SKL_ENABLE_ASSERTS)
+        if(SKL_ENABLE_DEBUGGING)
+                option(SKL_ENABLE_ASSERTS "Whether logging should be enabled or not" ON)
+        elseif(NOT SKL_ENABLE_DEBUGGING)
+                option(SKL_ENABLE_ASSERTS "Whether logging should be enabled or not" OFF)
+                message(FATAL_ERROR "Logging cannot be turned on for non debugging builds")
+        endif()
+endif()
+
+# Plugs in logging functionality to main executable (If logging logic is used by other)
+if(${SKL_ENABLE_LOGGING})
         target_compile_definitions(DEPENDENCIES INTERFACE SKL_LOGGING_ENABLED=1)
 else()
         target_compile_definitions(DEPENDENCIES INTERFACE SKL_LOGGING_ENABLED=0)
 endif()
 
 # Determines rendering backend if none is explicitly picked
-if(${render_sys} STREQUAL "Default")
+if(${SKL_RENDER_SYS} STREQUAL "Default")
         message("Assigning rendering backend based on machine...")
         if(APPLE)
                 # Currently MoltenVK has not caught up in terms of SDK to the currently used vulkan version
                 # Maybe we should change once that becomes avaliable
-                set(render_sys "WebGPU")
+                set(SKL_RENDER_SYS "WebGPU")
         elseif(EMSCRIPTEN)
                 # No other options for web
-                set(render_sys "WebGPU")
+                set(SKL_RENDER_SYS "WebGPU")
         else()
                 # Likely Vulkan will run better on the things it is natively supported by
-                set(render_sys "Vulkan")
+                set(SKL_RENDER_SYS "Vulkan")
         endif()
 
 # Checks if selected option is available for current device, throws error if not
@@ -58,19 +87,19 @@ else()
         message("Checking for api support on current machine...")
         # Web and Apple simply do not work with anything outside of WebGPU
         if(EMSCRIPTEN)
-                if(NOT ${render_sys} STREQUAL "WebGPU")
+                if(NOT ${SKL_RENDER_SYS} STREQUAL "WebGPU")
                         message(FATAL_ERROR "Web builds need to use WebGPU backend")
                 endif()
         elseif(APPLE)
-                if(NOT ${render_sys} STREQUAL "WebGPU")
+                if(NOT ${SKL_RENDER_SYS} STREQUAL "WebGPU")
                         message(FATAL_ERROR "Apple devices currently only support WebGPU backends")
                 endif()
         endif()
 endif()
 
 # Accordingly resolves dependencies required for each rendering backend
-message("Initializing [${render_sys}] rendering backend...")
-if(${render_sys} STREQUAL "Vulkan")
+message("Initializing [${SKL_RENDER_SYS}] rendering backend...")
+if(${SKL_RENDER_SYS} STREQUAL "Vulkan")
         add_definitions(-DIMGUI_IMPL_VULKAN_USE_VOLK)
         find_package(Vulkan REQUIRED)
         set(VULKAN_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/renderer/vk_backend)
@@ -94,7 +123,7 @@ if(${render_sys} STREQUAL "Vulkan")
 
         target_link_libraries(DEPENDENCIES INTERFACE vulkan-backend)
 
-elseif(${render_sys} STREQUAL "WebGPU")
+elseif(${SKL_RENDER_SYS} STREQUAL "WebGPU")
 
         # Includes backend dll as part of projects
         add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/renderer/wgpu_backend wgpu-backend)
@@ -131,10 +160,22 @@ endif()
 
 # Deals with local compilation
 if(NOT EMSCRIPTEN)
+        # Represents the directory the resulting executable will be at
+        # Depending on build system this may be shifted
+        set(BUILD_DIR ${CMAKE_BINARY_DIR})
+
+        if(XCODE)
+                # This makes the assumption that if SKL_ENABLE_DEBUGGING is true, xcode is also running in debug mode
+                # This behavior needs to be enforced by XCODE
+                if(SKL_ENABLE_DEBUGGING)
+                        set(BUILD_DIR ${CMAKE_BINARY_DIR}/Debug)
+                endif()
+        endif()
+
         # Includes shaders in build
-        if(render_sys STREQUAL "Vulkan")
+        if(SKL_RENDER_SYS STREQUAL "Vulkan")
                 set(SHADERS_IN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shaders")
-                set(SHADERS_OUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/shaders")
+                set(SHADERS_OUT_DIR "${BUILD_DIR}/shaders")
 
                 file(GLOB_RECURSE SHADERS "${SHADERS_IN_DIR}/*.slang")
 
@@ -156,15 +197,15 @@ if(NOT EMSCRIPTEN)
                 add_custom_target(build_shaders DEPENDS ${SHADER_OUT_NAMES})
 
                 add_dependencies(${PROJECT_NAME} build_shaders)
-        else(render_sys STREQUAL "WebGPU")
+        else(SKL_RENDER_SYS STREQUAL "WebGPU")
                 add_custom_command(TARGET ${PROJECT_NAME} PRE_LINK
-                        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/shaders/webgpu" "${CMAKE_BINARY_DIR}/shaders"
+                        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/shaders/webgpu" "${BUILD_DIR}/shaders"
                 )
         endif()
 
         # Imports other resources into build
         add_custom_command(TARGET ${PROJECT_NAME} PRE_LINK
-                COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different "${CMAKE_CURRENT_SOURCE_DIR}/data" ${CMAKE_BINARY_DIR}
+                COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different "${CMAKE_CURRENT_SOURCE_DIR}/data" ${BUILD_DIR}
         )
 
 # Preloads files for emscripten
