Moved math logic

--- a/src/renderer/wgpu_backend/CMakeLists.txt
+++ b/src/renderer/wgpu_backend/CMakeLists.txt
@@ -54,4 +54,4 @@ target_compile_definitions(wgpu-backend PRIVATE SKL_LOGGING_ENABLED=${SKL_ENABLE
 # Includes ported SDL3-webgpu conduit
 add_subdirectory(${CMAKE_SOURCE_DIR}/include/webgpu/sdl3webgpu-main sdl3webgpu)
 
-target_link_libraries(wgpu-backend PRIVATE glm::glm sdl3webgpu imgui)
+target_link_libraries(wgpu-backend PRIVATE glm::glm sdl3webgpu imgui skl-math)
