Add JoltPhysics to `CMakeLists.txt`, as a dependency for `game-module`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ CPMAddPackage("gh:libsdl-org/SDL#release-3.2.12")
 CPMAddPackage("gh:g-truc/glm#1.0.1")
 CPMAddPackage("gh:spnda/fastgltf#v0.8.0")
 CPMAddPackage("gh:ocornut/imgui#v1.91.9b")
+CPMAddPackage("gh:jrouwe/JoltPhysics#v5.3.0")
 
 #==============================================================================
 # SHARED DEPENDENCIES (Between platform, rendering backend, and game)
@@ -173,7 +174,8 @@ set_target_properties(game-module PROPERTIES
 target_link_libraries(game-module PRIVATE
         SHARED_DEPENDENCIES
         RENDERING_BACKEND
-        fastgltf::fastgltf)
+        fastgltf::fastgltf
+        Jolt)
 target_include_directories(game-module PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
