Created rough size shifting logic

--- a/src/renderer/wgpu_backend/CMakeLists.txt
+++ b/src/renderer/wgpu_backend/CMakeLists.txt
@@ -9,8 +9,14 @@ endif()
 
 set(DAWN_FETCH_DEPENDENCIES ON)
 if(EMSCRIPTEN)
-        add_library(wgpu-backend STATIC ${CMAKE_CURRENT_SOURCE_DIR}/renderer_wgpu.cpp ${CMAKE_CURRENT_SOURCE_DIR}/render_backend_wgpuimpl.cpp)
-        target_include_directories(wgpu-backend PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
+        add_library(wgpu-backend STATIC 
+                ${CMAKE_CURRENT_SOURCE_DIR}/renderer_wgpu.cpp 
+                ${CMAKE_CURRENT_SOURCE_DIR}/render_backend_wgpuimpl.cpp
+                ${CMAKE_CURRENT_SOURCE_DIR}/utils_wgpu.cpp
+                ${CMAKE_CURRENT_SOURCE_DIR}/bind_group_wgpu.cpp)
+        target_include_directories(wgpu-backend PRIVATE 
+                ${CMAKE_SOURCE_DIR}/include 
+                ${CMAKE_SOURCE_DIR}/src)
 
         add_library(webgpu INTERFACE)
         # Fetches emscripten Dawn port
@@ -30,10 +36,19 @@ if(EMSCRIPTEN)
         )
 else()
         if(${SKL_ENABLE_EDITOR_MODE})
-                add_library(wgpu-backend STATIC ${CMAKE_CURRENT_SOURCE_DIR}/renderer_wgpu.cpp ${CMAKE_CURRENT_SOURCE_DIR}/render_backend_wgpuimpl.cpp ${imgui_SOURCE_DIR}/backends/imgui_impl_wgpu.cpp)
+                add_library(wgpu-backend STATIC 
+                        ${CMAKE_CURRENT_SOURCE_DIR}/renderer_wgpu.cpp 
+                        ${CMAKE_CURRENT_SOURCE_DIR}/render_backend_wgpuimpl.cpp 
+                        ${CMAKE_CURRENT_SOURCE_DIR}/utils_wgpu.cpp
+                        ${imgui_SOURCE_DIR}/backends/imgui_impl_wgpu.cpp
+                        ${CMAKE_CURRENT_SOURCE_DIR}/bind_group_wgpu.cpp)
                 target_include_directories(wgpu-backend PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src $<BUILD_INTERFACE:${imgui_SOURCE_DIR}>)
         else()
-                add_library(wgpu-backend STATIC ${CMAKE_CURRENT_SOURCE_DIR}/renderer_wgpu.cpp ${CMAKE_CURRENT_SOURCE_DIR}/render_backend_wgpuimpl.cpp)
+                add_library(wgpu-backend STATIC 
+                        ${CMAKE_CURRENT_SOURCE_DIR}/renderer_wgpu.cpp 
+                        ${CMAKE_CURRENT_SOURCE_DIR}/render_backend_wgpuimpl.cpp
+                        ${CMAKE_CURRENT_SOURCE_DIR}/utils_wgpu.cpp
+                        ${CMAKE_CURRENT_SOURCE_DIR}/bind_group_wgpu.cpp)
                 target_include_directories(wgpu-backend PRIVATE ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
         endif()
 
